--- a/_layouts/widget.html
+++ b/_layouts/widget.html
@@ -9,8 +9,11 @@
 	<link rel="mask-icon" href="/favicon.svg" color="#666666">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.widget.css" />
 	<script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/leancloud-storage@3.2.0/dist/av-min.js"></script>
 {{ content }}
 
+<footer><a href="/" target="_blank">{{ site.data.svg['logo'] }}</a></footer>
+
+<script src="{{ site.baseurl}}/assets/script.data.js"></script>
+<script src="{{ site.baseurl}}/assets/script.widget.js"></script>
 </body>
 </html>
