Update strategy for Komori

--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,13 +1,15 @@
 	<section itemprop="comment" data-count="0">
 		<form>
+			<article></article>
+			<label><textarea required placeholder="　" minlength="8" maxlength="400"></textarea><span>支持 <code>Markdown</code></span></label>
 			<div>
 				<label><input name="name" type="text" placeholder="　" required minlength="4" maxlength="20" /><span>名字 ★</span></label>
 				<label><input name="mail" type="email" placeholder="　" required /><span>邮箱 ★</span></label>
 				<label><input name="link" type="url" placeholder="　" /><span>链接</span></label>
-				<a aria-label="submit">+</a>
-				<a aria-label="close">×</a>
+				<a aria-label="preview">{{ site.data.svg['view'] }}</a>
+				<a aria-label="enter">{{ site.data.svg['enter'] }}</a>
+				<a aria-label="close">{{ site.data.svg['close'] }}</a>
 			</div>
-			<label><textarea required placeholder="　" minlength="8" maxlength="400"></textarea><span>支持 <code>Markdown</code></span></label>
 		</form>
 		<ul role="list"></ul>
 	</section>
