--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,10 @@
 
 </div>
 
-<script src="https://www.googletagmanager.com/gtag/js?id=UA-162600333-1"></script>{% if page.layout == 'weblog' or page.layout == 'works' %}
-<script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>{% endif %}
-<script src="{{ site.baseurl }}/assets/script.common.js"></script>
-<script src="{{ site.baseurl }}/assets/script.data.js"></script>
+<script type="text/javascript" src="https://www.googletagmanager.com/gtag/js?id=UA-162600333-1"></script>{% if page.layout == 'weblog' or page.layout == 'works' %}
+<script type="text/javascript" src="https://pv.sohu.com/cityjson?ie=utf-8"></script>{% endif %}
+<script type="text/javascript" src="{{ site.baseurl }}/assets/script.common.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/script.data.js"></script>
 
 </body>
 </html>
