--- a/_layouts/widget.html
+++ b/_layouts/widget.html
@@ -13,7 +13,8 @@
 
 <footer><a href="/" target="_blank">{{ site.data.svg['logo'] }}</a></footer>
 
-<script src="{{ site.baseurl}}/assets/script.data.js"></script>
+<script src="https://www.googletagmanager.com/gtag/js?id=UA-162600333-1"></script>
 <script src="{{ site.baseurl}}/assets/script.widget.js"></script>
+<script src="{{ site.baseurl}}/assets/script.data.js"></script>
 </body>
 </html>
