--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,8 +13,8 @@
 	<link rel="mask-icon" href="/favicon.svg" color="#666666">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/styles.css" />
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@500&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-	<script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
-	<script src="{{ site.baseurl }}/assets/scripts.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="{{ site.baseurl }}/assets/scripts.js"></script>
 </head>
 
 <body class="load" data-layout="{{ page.layout }}">
