--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,7 @@
 
 </div>
 
-<script type="text/javascript" src="https://www.googletagmanager.com/gtag/js?id=UA-162600333-1"></script>{% if page.layout == 'weblog' or page.layout == 'works' %}
-<script type="text/javascript" src="https://pv.sohu.com/cityjson?ie=utf-8"></script>{% endif %}
+<script type="text/javascript" src="https://www.googletagmanager.com/gtag/js?id=UA-162600333-1"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/assets/script.common.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/assets/script.data.js"></script>
 
