--- a/_layouts/weblog.html
+++ b/_layouts/weblog.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-	<article data-layout itemscope itemtype="https://schema.org/BlogPosting">
+	<article itemscope itemtype="https://schema.org/BlogPosting">
 		<h1 itemprop="name">{{ page.title }}</h1>
 		<header>
 			<p>
