--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -158,8 +158,10 @@ button, input, textarea {
 	font-weight: 500;
 	color: hsl(0, 0%, var(--bright20));
 	transition: .2s ease-in-out;
+	transition-property: color, background;
 }
 h1, h2, h3, h4, h5, h6 {
+	font-size: 1rem;
 	font-weight: 500;
 }
 ul {
@@ -675,50 +677,6 @@ header[role] .scheme path:nth-child(7) {
 	}
 }
 
-[data-tooltip] {
-	position: relative;
-}
-[data-tooltip]::before,
-[data-tooltip]::after {
-	position: absolute;
-	top: 0;
-	left: 50%;
-	opacity: 0;
-	-webkit-backdrop-filter: blur(2px);
-	backdrop-filter: blur(2px);
-	z-index: 0;
-	transition: .2s ease-in-out;
-	transition-property: color, background, border-color, opacity;
-	pointer-events: none;
-}
-[data-tooltip]:hover::before,
-[data-tooltip]:hover::after {
-	opacity: .75;
-}
-[data-tooltip]::before {
-	content: "";
-	margin-left: -.25rem; 
-	border: .25rem solid;
-	border-color: hsl(0, 0%, var(--bright20)) transparent transparent transparent;
-}
-[data-tooltip]::after {
-	content: attr(data-tooltip);
-	margin: -1.5rem 0 0 -2rem;
-	width: 4rem;
-	line-height: 1.5rem;
-	font-size: .8rem;
-	text-align: center;
-	color: hsl(0, 0%, 100%);
-	background: hsl(0, 0%, var(--bright20));
-	border-radius: 1px;
-}
-[data-scheme="dark"] [data-tooltip]::before {
-	border-color: hsl(0, 0%, 10%) transparent transparent transparent;
-}
-[data-scheme="dark"] [data-tooltip]::after {
-	background: hsl(0, 0%, 10%);
-}
-
 span[itemprop]:empty {
 	display: none;
 }
@@ -1018,7 +976,6 @@ main article [itemprop="abstract"],
 main article [itemprop="notes"] {
 	font-family: "Iosevka", var(--font);
 	text-align: justify;
-	text-justify: inter-ideograph;
 }
 main article [itemprop="notes"] {
 	margin: 1rem 0;
@@ -1077,7 +1034,10 @@ main article [itemprop="articleBody"] h2 em {
 }
 main article [itemprop="articleBody"] h3 {
 	margin: 3rem 0 1rem;
-	font-size: 1rem;
+}
+main article [itemprop="articleBody"] h3 code {
+	color: hsl(0, 0%, var(--bright100));
+	background: hsl(0, 0%, var(--bright30));
 }
 
 main article nav div {
@@ -1180,16 +1140,17 @@ main article nav [data-present="bar"].current {
 	}
 }
 
-main article [itemprop="comment"] {
+section[itemprop="comment"] {
 	position: relative;
 	margin: 10rem 0;
+	font-family: var(--font);
 	font-size: .9375rem;
 }
-main article [itemprop="comment"].off {
+section[itemprop="comment"].off {
 	max-height: 4rem;
 	overflow: hidden;
 }
-main article [itemprop="comment"] header {
+section[itemprop="comment"] header {
 	position: absolute;
 	margin: 0;
 	width: 100%;
@@ -1200,43 +1161,67 @@ main article [itemprop="comment"] header {
 	pointer-events: none;
 	transition: opacity .2s ease-in-out;
 }
-main article [itemprop="comment"].off header {
+section[itemprop="comment"].off header {
 	opacity: 1;
 	pointer-events: auto;
 }
-main article [itemprop="comment"] header a {
+section[itemprop="comment"] header a {
 	display: block;
 	text-align: center;
 	line-height: 4rem;
 }
-main article [itemprop="comment"] form > div:first-child {
+section[itemprop="comment"] form {
+	position: sticky;
+	top: 0;
+	margin: 0 0 4rem;
+	padding: 1rem 0;
+	background: hsl(0, 0%, var(--bright100));
+	border-bottom: 1px solid hsla(0, 0%, 60%, .5);
+	transition: background .2s ease-in-out;
+}
+section[itemprop="comment"] form > div:first-child {
 	background: hsl(0, 0%, var(--bright95));
 	border-radius: 2px;
-	transition: .2s ease-in-out;
-	transition-property: background;
+	transition: background .2s ease-in-out;
 }
-main article [itemprop="comment"] form > div:first-child:focus-within {
+section[itemprop="comment"] form > div:first-child:focus-within {
 	background: hsl(0, 0%, var(--bright90));
 }
-main article [itemprop="comment"] form:invalid a[aria-label="enter"] {
+section[itemprop="comment"] form > div:last-child {
+	display: flex;
+	align-items: flex-start;
+	margin: 1rem 0;
+}
+section[itemprop="comment"] blockquote[aria-label] {
+	flex: 1 1 30rem;
+	margin: 0 2rem 0 0;
+	padding: 0;
+	font-size: .875rem;
+	color: hsl(0, 0%, 60%);
+	border: 0;
+}
+section[itemprop="comment"] form:invalid a[aria-label="enter"] {
 	opacity: .5;
 	pointer-events: none;
 }
-main article [itemprop="comment"] [aria-label="quote"] {
+section[itemprop="comment"] [aria-label="quote"] {
 	display: none;
 }
-main article [itemprop="comment"] fieldset {
+section[itemprop="comment"] [aria-label="quote"] article {
+	padding: 1rem;
+}
+section[itemprop="comment"] fieldset {
 	display: grid;
 	grid-gap: .5em;
 	grid-template-columns: repeat(3, 1fr);
 	padding: 0 .5em .5em;
 }
-main article [itemprop="comment"] label {
+section[itemprop="comment"] label {
 	position: relative;
 	display: block;
 	font-size: .875rem;
 }
-main article [itemprop="comment"] label svg {
+section[itemprop="comment"] label svg {
 	position: absolute;
 	top: .1rem;
 	left: .46875rem;
@@ -1244,109 +1229,141 @@ main article [itemprop="comment"] label svg {
 	pointer-events: none;
 	transition: opacity .2s ease-in-out;
 }
-main article [itemprop="comment"] input,
-main article [itemprop="comment"] textarea {
-	padding: .3em .5em .2em;
+section[itemprop="comment"] input,
+section[itemprop="comment"] textarea {
 	width: 100%;
-	font-size: .9375rem;
 	line-height: 1.5;
+}
+section[itemprop="comment"] input {
+	padding: .3em .5em .2em;
+	font-size: .875rem;
 	background: hsla(0, 0%, var(--bright100), .75);
 	border-radius: 2px;
 	transition: background .2s ease-in-out;
 }
-main article [itemprop="comment"] input:focus {
+section[itemprop="comment"] input:focus {
 	background: hsl(0, 0%, var(--bright100));
 }
-main article [itemprop="comment"] textarea {
+section[itemprop="comment"] textarea {
 	padding: 1em;
-	height: 100%;
 	min-height: 8em;
+	font-size: .9375rem;
 	background: transparent;
 	overflow: hidden;
 	resize: none;
 }
-main article [itemprop="comment"] input:placeholder-shown + span,
-main article [itemprop="comment"] textarea:placeholder-shown + span {
+section[itemprop="comment"] input:placeholder-shown + span,
+section[itemprop="comment"] textarea:placeholder-shown + span {
 	opacity: .5;
 }
-main article [itemprop="comment"] input:placeholder-shown:focus + span,
-main article [itemprop="comment"] textarea:placeholder-shown:focus + span {
+section[itemprop="comment"] input:placeholder-shown:focus + span,
+section[itemprop="comment"] textarea:placeholder-shown:focus + span {
 	opacity: 0;
 }
 
-main article [itemprop="comment"] a[aria-label] {
+section[itemprop="comment"] a[aria-label] {
 	padding: .25rem 0 0;
 	width: 1.75rem;
 	text-align: center;
 	background: hsl(0, 0%, var(--bright95));
 	border-radius: 2px;
 }
-main article [itemprop="comment"] a[aria-label] svg {
+section[itemprop="comment"] a[aria-label] svg {
 	width: 1rem;
 	height: 1rem;
 	fill: hsl(0, 0%, var(--bright50));
 }
-main article [itemprop="comment"] a[aria-label]:hover,
-main article [itemprop="comment"] a[data-rid]:hover {
+section[itemprop="comment"] a[aria-label]:hover,
+section[itemprop="comment"] a[data-rid]:hover {
 	background: hsl(0, 0%, var(--bright80));
 }
-main article [itemprop="comment"] form a[aria-label] {
+section[itemprop="comment"] form a[aria-label] {
 	margin: 0 0 0 .5rem;
 	display: inline-block;
 }
-main article [itemprop="comment"] ul a[aria-label] {
-	position: absolute;
-	right: 0;
-	bottom: 1.125rem;
-	line-height: 1.75;
+section[itemprop="comment"] form a[aria-label="reply"] svg {
+	transform: rotate(45deg);
 }
 
-main article [itemprop="comment"] ul[role] {
-	margin: 1rem 0;
+section[itemprop="comment"] ul[aria-label] {
 	padding: 0;
 	line-height: 1.5;
-	border-bottom: 1px solid hsl(0, 0%, var(--bright90));
-	transition: border-color .2s ease-in-out;
 }
-main article [itemprop="comment"] ul[role]:empty {
+section[itemprop="comment"] ul[itemprop] {
+	padding: 0;
+}
+section[itemprop="comment"] ul:empty {
 	display: none;
 }
-main article [itemprop="comment"] li[role] {
+section[itemprop="comment"] li[itemscope] {
+	position: unset;
+	margin: 2rem 0;
 	padding: 0;
-	border-top: 1px solid hsl(0, 0%, var(--bright90));
-	transition: border-color .2s ease-in-out;
 }
-main article [itemprop="comment"] li[role]::before {
+section[itemprop="comment"] li[itemscope]::before {
 	content: none;
 }
-main article [itemprop="comment"] li[role] ul[role] {
-	margin: 0 0 0 2rem;
-	border: none;
-}
-main article [itemprop="comment"] li.on > article {
-	opacity: .25;
-}
-main article [itemprop="comment"] article {
-	position: relative;
-	margin: 0;
-	padding: 1rem 0 1.125rem;
-	transition: opacity .2s ease-in-out;
-}
-main article [itemprop="comment"] article footer {
+section[itemprop="comment"] article {
 	display: flex;
-	margin: 0 0 1rem;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 0;
 }
-main article [itemprop="comment"] article time {
-	margin: 0 auto 0 1rem;
-	opacity: .5;
+section[itemprop="comment"] article [role="img"] {
+	flex: 0 0 3rem;
 }
-main article [itemprop="comment"] article a[data-rid] {
-	padding: 0 .25rem;
-	font-size: .875rem;
-	color: hsl(0, 0%, var(--bright50));
+section[itemprop="comment"] article [role="img"] svg {
+	fill: hsl(0, 0%, var(--bright20));
+}
+section[itemprop="comment"] article div {
+	flex: 1 1 30rem;
+	margin: 0 1rem;
+	padding: 1rem;
 	background: hsl(0, 0%, var(--bright95));
 	border-radius: 2px;
+	transition: background .2s ease-in-out;
+}
+section[itemprop="comment"] li ul[itemprop] article div {
+	order: -1;
+}
+section[itemprop="comment"] li.on > article div {
+	background: hsl(0, 0%, var(--bright80));
+}
+section[itemprop="comment"] footer {
+	flex: 0 0 100%;
+	align-items: center;
+	display: flex;
+	margin: 1.5rem 0 0;
+	font-size: .875rem;
+	color: hsl(0, 0%, var(--bright50));
+	transition: color .2s ease-in-out;
+}
+section[itemprop="comment"] footer a {
+	padding: 0 .25rem .1rem;
+	border-radius: 2px;
+}
+section[itemprop="comment"] footer a[itemprop] {
+	background: hsl(0, 0%, var(--bright100));
 	transition-property: color, background;
+}
+section[itemprop="comment"] footer a[target] {
+	color: hsl(0, 0%, var(--bright20));
+	border: 0;
+}
+section[itemprop="comment"] footer a[itemprop]:not([target]) {
+	pointer-events: none;
+}
+section[itemprop="comment"] footer a[rel="home"] {
+	color: hsl(0, 0%, var(--bright100));
+	background: hsl(0, 0%, var(--bright40));
+}
+section[itemprop="comment"] footer time {
+	margin: 0 1rem;
+	color: hsl(0, 0%, 60%);
+}
+section[itemprop="comment"] footer a[aria-label] {
+	margin: 0 0 0 auto;
+	background: transparent;
 }
 
 @media only screen and (min-width: 64rem) {
@@ -1354,19 +1371,19 @@ main article [itemprop="comment"] article a[data-rid] {
 @media only screen and (max-width: 63.99rem) {
 }
 
-main nav[data-current] {
+nav[data-current] {
 	position: relative;
 	display: flex;
 	margin: 10rem 0;
 }
-main nav[data-current]::before {
+nav[data-current]::before {
 	content: "PAGE";
 	margin: 0 1rem 0 0;
 	flex: 0 0 4rem;
 	letter-spacing: 1px;
 	border-right: 1px solid hsl(0, 0%, 60%);
 }
-main nav[data-current] a {
+nav[data-current] a {
 	margin: 0 .5rem;
 	flex: 0 0 1rem;
 	font-family: var(--font);
@@ -1374,10 +1391,10 @@ main nav[data-current] a {
 	color: hsl(0, 0%, var(--bright30));
 	transition: color .2s ease-in-out;
 }
-main nav[data-current] a.current {
+nav[data-current] a.current {
 	pointer-events: none;
 }
-main nav[data-current] a:last-child::after {
+nav[data-current] a:last-child::after {
 	content: "";
 	position: absolute;
 	left: 0;
@@ -1388,43 +1405,43 @@ main nav[data-current] a:last-child::after {
 	pointer-events: none;
 	transition: left .25s ease-in-out, background .2s ease-in-out;
 }
-main nav[data-current="0"] a:last-child::after {
+nav[data-current="0"] a:last-child::after {
 	background: transparent;
 	transition-delay: 10s, 0s;
 }
-[data-layout="weblog-page"] main nav[data-current="0"] a:last-child::after,
-main nav[data-current="1"] a:last-child::after,
-main nav[data-current] a:nth-child(1):hover ~ a:last-child::after,
-main nav[data-current] a:nth-child(1):focus ~ a:last-child::after {
+[data-layout="weblog-page"] nav[data-current="0"] a:last-child::after,
+nav[data-current="1"] a:last-child::after,
+nav[data-current] a:nth-child(1):hover ~ a:last-child::after,
+nav[data-current] a:nth-child(1):focus ~ a:last-child::after {
 	left: 5.5rem;
 }
-main nav[data-current="2"] a:last-child::after,
-main nav[data-current] a:nth-child(2):hover ~ a:last-child::after,
-main nav[data-current] a:nth-child(2):focus ~ a:last-child::after {
+nav[data-current="2"] a:last-child::after,
+nav[data-current] a:nth-child(2):hover ~ a:last-child::after,
+nav[data-current] a:nth-child(2):focus ~ a:last-child::after {
 	left: 7.5rem;
 }
-main nav[data-current="3"] a:last-child::after,
-main nav[data-current] a:nth-child(3):hover ~ a:last-child::after,
-main nav[data-current] a:nth-child(3):focus ~ a:last-child::after {
+nav[data-current="3"] a:last-child::after,
+nav[data-current] a:nth-child(3):hover ~ a:last-child::after,
+nav[data-current] a:nth-child(3):focus ~ a:last-child::after {
 	left: 9.5rem;
 }
-main nav[data-current="4"] a:last-child::after,
-main nav[data-current] a:nth-child(4):hover ~ a:last-child::after,
-main nav[data-current] a:nth-child(4):focus ~ a:last-child::after {
+nav[data-current="4"] a:last-child::after,
+nav[data-current] a:nth-child(4):hover ~ a:last-child::after,
+nav[data-current] a:nth-child(4):focus ~ a:last-child::after {
 	left: 11.5rem;
 }
-main nav[data-current="5"] a:last-child::after,
-main nav[data-current] a:nth-child(5):hover ~ a:last-child::after,
-main nav[data-current] a:nth-child(5):focus ~ a:last-child::after {
+nav[data-current="5"] a:last-child::after,
+nav[data-current] a:nth-child(5):hover ~ a:last-child::after,
+nav[data-current] a:nth-child(5):focus ~ a:last-child::after {
 	left: 13.5rem;
 }
-main nav[data-current="6"] a:last-child::after,
-[data-layout="works-page"] main nav[data-current] a:last-child:hover::after,
-[data-layout="works-page"] main nav[data-current] a:last-child:focus::after {
+nav[data-current="6"] a:last-child::after,
+[data-layout="works-page"] nav[data-current] a:last-child:hover::after,
+[data-layout="works-page"] nav[data-current] a:last-child:focus::after {
 	left: 15.5rem;
 }
-main nav[data-current] a:hover ~ a:last-child::after,
-main nav[data-current] a:last-child:hover::after {
+nav[data-current] a:hover ~ a:last-child::after,
+nav[data-current] a:last-child:hover::after {
 	background: hsl(0, 0%, var(--bright70));
 	transition-delay: 0s !important;
 }
@@ -1699,17 +1716,13 @@ footer[role] p:last-child {
 }
 
 [data-layout="default"] article {
-	margin: 5rem -1rem 5rem 0;
+	margin: 5rem -.5rem;
 }
-@media only screen and (min-width: 64rem) {
-	[data-layout="default"] article {
-		margin: 5rem -10rem 5rem -9rem;
-	}
-}
-[data-layout="default"] article h3 {
-	font-size: 1rem;
+[data-layout="default"] article li h3 {
+	opacity: .99;
 }
 [data-layout="default"] article p {
+	margin: .25rem 0 0;
 	font-size: .875rem;
 	opacity: .75;
 }
@@ -1720,34 +1733,44 @@ footer[role] p:last-child {
 	padding: 0;
 }
 [data-layout="default"] article li {
-	margin: 0 1rem 1rem 0;
+	flex: 1 1 auto;
+	margin: .5rem;
 	padding-inline-start: 0;
-	border-radius: 2px;
+	border-radius: 1px;
+	overflow: hidden;
 }
 [data-layout="default"] article li::before {
 	content: none;
 }
 [data-layout="default"] article li a {
+	position: relative;
 	display: block;
 	padding: 1rem;
-	background: hsl(240, 20%, 90%);
-}
-[data-layout="default"] article li a:hover {
-	background: hsl(240, 20%, 85%);
+	line-height: 1.5;
+	background: hsl(240, 30%, 90%);
 }
 [data-scheme="dark"] [data-layout="default"] article li a {
 	display: block;
 	padding: 1rem;
-	background: hsl(240, 10%, 25%);
-}
-[data-scheme="dark"] [data-layout="default"] article li a:hover {
-	background: hsl(240, 10%, 30%);
+	background: hsl(240, 10%, 35%);
 }
 [data-layout="default"] article li a[rel] {
 	background: hsl(0, 0%, var(--bright95));
 }
-[data-layout="default"] article li a[rel]:hover {
-	background: hsl(0, 0%, var(--bright90));
+[data-layout="default"] article li a::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	transition: background .2s ease-in-out;
+}
+[data-layout="default"] article li a:hover::before {
+	background: hsla(0, 0%, 100%, .4);
+}
+[data-scheme="dark"] [data-layout="default"] article li a:hover::before {
+	background: hsla(0, 0%, 100%, .1);
 }
 
 [itemprop="articleBody"] div:not(.language-plaintext) .highlight code {
