--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,5 +1,5 @@
-	<section itemprop="comment" class="o ff">
-		<header><a>Feed me some comments!</a></header>
+	<section class="off" itemprop="comment" style="max-height: 4rem; overflow: hidden;">
+		<header class="on"><a>Feed me some comments!</a></header>
 		<form>
 			<div>
 				<div aria-label="quote"><article></article></div>
@@ -12,8 +12,7 @@
 			</div>
 			<div>
 				<blockquote aria-label="instruction">
-					<p>姓名、邮箱必填；</p>
-					<p>支持基础 <code>Markdown</code>：</p>
+					姓名、邮箱必填；支持基础 Markdown 语法。
 				</blockquote>
 				<a aria-label="preview">{{ site.data.svg['view'] }}</a>
 				<a aria-label="enter">{{ site.data.svg['enter'] }}</a>
