--- a/_layouts/weblog.html
+++ b/_layouts/weblog.html
@@ -19,4 +19,5 @@ layout: default
 {{ content | remove: ' highlighter-rouge' | remove: '<div class="highlight">' | replace: '</code></pre></div></div>', '</code></pre></div>' | replace: '<table>', '<div class="table"><table>' | replace: '</table>', '</table></div>' | replace: '<a href="http', '<a target="_blank" rel="noopener noreferrer nofollow" href="http' }}
 		</section>
 	</article>
+{% include comment.html %}
 </main>
