--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -3,9 +3,9 @@
 		<form>
 			<div>
 				<div aria-label="quote"><article></article></div>
-				<textarea required minlength="8" maxlength="800"></textarea>
+				<textarea required></textarea>
 				<fieldset>
-					<label><input name="name" type="text" placeholder="　" required minlength="4" maxlength="20">{{ site.data.svg['name'] }}</label>
+					<label><input name="name" type="text" placeholder="　" required>{{ site.data.svg['name'] }}</label>
 					<label><input name="mail" type="email" placeholder="　" required>{{ site.data.svg['mail'] }}</label>
 					<label><input name="link" type="url" placeholder="　">{{ site.data.svg['link'] }}</label>
 				</fieldset>
