--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
 <header role="banner">
 	<ul role="menu">
 		<li role="menuitem"><a class="internal" rel="home" href="{{ site.baseurl }}/">{{ site.data.svg['logo'] }}{{ site.name }}</a></li>
-		<li role="menuitem"><a class="internal" href="{{ site.baseurl }}/weblog/">日常<span>/Weblog</span></a></li>
+		<li role="menuitem"><a class="internal" href="{{ site.baseurl }}/weblog/">记录<span>/Weblog</span></a></li>
 		<li role="menuitem"><a class="internal" href="{{ site.baseurl }}/widget/">工具<span>/Widget</span></a></li>
 		<li role="menuitem"><a class="internal" href="{{ site.baseurl }}/works/">更新<span>/Works</span></a><ul>
 			{%- for datum in site.data.works limit: 10 -%}{% if datum[1].show %}
