--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -740,7 +740,7 @@ main article li {
 main article ul li::before {
 	content: "";
 	position: absolute;
-	top: .7em;
+	top: .9em;
 	left: -.5rem;
 	width: .5rem;
 	height: 0;
@@ -1731,7 +1731,7 @@ footer[role] p:last-child {
 [data-layout="weblog-page"] article:not([itemscope]) ul time {
 	flex: 0 0 auto;
 	margin: 0 0 .125rem;
-	font-family: var(--font);
+	font-family: "Fira Code", "Source Han Sans CN", "Source Han Sans SC", "Noto Sans CJK SC", "HanHei SC", "Microsoft Yahei", -apple-system, BlinkMacSystemFont, system-ui, monospace;
 	font-size: .875rem;
 	opacity: .6;
 }
