--- a/_layouts/weblog.html
+++ b/_layouts/weblog.html
@@ -6,13 +6,13 @@ layout: default
 		<h1 itemprop="name">{{ page.title }}</h1>
 		<header>
 			<p>
-				<time itemprop="datePublished">{{ page.date | date: '%Y-%m-%d' }}</time>
+				<time itemprop="datePublished">{{ page.date | date: "%Y-%m-%d" }}</time>
 				{% if page.tags.size > 0 %}<span itemprop="keywords">
-					{{ site.data.svg['tag'] }}
-					{{ page.tags | join: ' ' }}
+					{{ site.data.svg["tag"] }}
+					{{ page.tags | join: " " }}
 				</span>{% endif %}
-				<span class="view off">{{ site.data.svg['view'] }} </span>
-				<span class="like off">{{ site.data.svg['like'] }} </span>
+				<span class="view off">{{ site.data.svg["view"] }} </span>
+				<span class="like off">{{ site.data.svg["like"] }} </span>
 			</p>
 		</header>
 		<section itemprop="articleBody">
